--- a/index.ipynb
+++ b/index.ipynb
@@ -184,9 +184,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "d57264f0-c994-11e9-a4ed-dd8ec2afa3dc",
+         "x": [
+          0,
+          50,
+          100
+         ],
+         "y": [
+          20,
+          95,
+          170
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"f19e3404-87c9-4545-b9c7-b5283c07deac\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f19e3404-87c9-4545-b9c7-b5283c07deac\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"d592b2e6-c994-11e9-a4ed-dd8ec2afa3dc\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f19e3404-87c9-4545-b9c7-b5283c07deac\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f19e3404-87c9-4545-b9c7-b5283c07deac\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"d592b2e6-c994-11e9-a4ed-dd8ec2afa3dc\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly import graph_objs\n",
