--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    first = m_b_data(m, b, x_values)\n",
-    "    return {first, }"
+    "    return {'mode': }"
    ]
   },
   {
