--- a/index.ipynb
+++ b/index.ipynb
@@ -327,8 +327,8 @@
    ],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    first = m_b_data(m, b, x_values)\n",
-    "    return {'mode': mode, 'name': name, first}"
+    "    funcvalues = m_b_data(m, b, x_values)\n",
+    "    return {'mode': mode, 'name': name, funcvalue}"
    ]
   },
   {
