Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,9 +327,9 @@
    ],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    values = m_b_data(m, b, x_values)\n",
-    "    values.update({'mode': mode, 'name': name})\n",
-    "    return values"
+    "    funcvalues = m_b_data(m, b, x_values)\n",
+    "    funcvalues.update({'mode': mode, 'name': name})\n",
+    "    return fvalues"
    ]
   },
   {
