Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,8 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    x = second_show('budget') - first_show('budg')"
+    "    x = second_show('budget') - first_show('budget')\n",
+    "    y = "
    ]
   },
   {
