Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    x = second_show('budget') - first_show('budget')\n",
-    "    y = "
+    "    y = second_show('attendance') - "
    ]
   },
   {
