--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,7 @@
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    x = second_show('budget') - first_show('budget')\n",
     "    y = second_show('attendance') - first_show('attendance')\n",
-    "    "
+    "    slope = "
    ]
   },
   {
