--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "   return (second_show['attedance'] - first_show['attendance'])/()"
+    "   return (second_show['attemance'] - first_show['attendance'])/(second_show['attedance'] - first_show['attendance'])"
    ]
   },
   {
